--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "dat.gui",
+  "name": "dat-gui",
   "version": "0.6.2",
   "homepage": "https://github.com/dataarts/dat.gui.git",
   "authors": [
